@@ -1,5 +1,7 @@
 [Changes 1.2.2]
 
+* Improve some messages in /window size (reported by cpet). (caf)
+
 * Improve messages around DCC auto-get / auto-rename / auto-resume. (caf)
 
 * Fix spelling of "receive" in all client output. (caf)
